sabayon: switch to BFQ permanently

--- a/sabayon/config/ec2-3.5-amd64.config
+++ b/sabayon/config/ec2-3.5-amd64.config
@@ -225,6 +225,8 @@ CONFIG_BLOCK_COMPAT=y
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_DEADLINE is not set
 # CONFIG_IOSCHED_CFQ is not set
+CONFIG_IOSCHED_BFQ=y
+# CONFIG_DEFAULT_BFQ is not set
 CONFIG_DEFAULT_NOOP=y
 CONFIG_DEFAULT_IOSCHED="noop"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
