sabayon: update kernel configs, add ZFS=m SPL=m

--- a/sabayon/config/ec2-3.5-amd64.config
+++ b/sabayon/config/ec2-3.5-amd64.config
@@ -1237,6 +1237,7 @@ CONFIG_DMIID=y
 # File systems
 #
 CONFIG_DCACHE_WORD_ACCESS=y
+CONFIG_ZFS=m
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT2_FS_POSIX_ACL=y
@@ -1766,3 +1767,4 @@ CONFIG_NLATTR=y
 # CONFIG_AVERAGE is not set
 # CONFIG_CORDIC is not set
 # CONFIG_DDR is not set
+CONFIG_SPL=m
