--- a/sabayon/config/ec2-3.5-x86.config
+++ b/sabayon/config/ec2-3.5-x86.config
@@ -1272,6 +1272,7 @@ CONFIG_DMIID=y
 # File systems
 #
 CONFIG_DCACHE_WORD_ACCESS=y
+CONFIG_ZFS=m
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT2_FS_POSIX_ACL=y
@@ -1798,3 +1799,4 @@ CONFIG_NLATTR=y
 # CONFIG_AVERAGE is not set
 # CONFIG_CORDIC is not set
 # CONFIG_DDR is not set
+CONFIG_SPL=m
