--- a/sabayon/config/sabayon-3.5-x86.config
+++ b/sabayon/config/sabayon-3.5-x86.config
@@ -6017,6 +6017,7 @@ CONFIG_GOOGLE_MEMCONSOLE=m
 # File systems
 #
 CONFIG_DCACHE_WORD_ACCESS=y
+CONFIG_ZFS=m
 CONFIG_EXT2_FS=m
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT2_FS_POSIX_ACL=y
@@ -6619,3 +6620,4 @@ CONFIG_LRU_CACHE=m
 CONFIG_AVERAGE=y
 CONFIG_CORDIC=m
 CONFIG_DDR=y
+CONFIG_SPL=m
