--- a/sabayon/config/server-3.5-amd64.config
+++ b/sabayon/config/server-3.5-amd64.config
@@ -5732,6 +5732,7 @@ CONFIG_GOOGLE_MEMCONSOLE=m
 # File systems
 #
 CONFIG_DCACHE_WORD_ACCESS=y
+CONFIG_ZFS=m
 CONFIG_EXT2_FS=m
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT2_FS_POSIX_ACL=y
@@ -6336,3 +6337,4 @@ CONFIG_LRU_CACHE=m
 CONFIG_AVERAGE=y
 CONFIG_CORDIC=m
 CONFIG_DDR=y
+CONFIG_SPL=m
