--- a/arch/arm/configs/odroidx_defconfig
+++ b/arch/arm/configs/odroidx_defconfig
@@ -377,6 +377,7 @@ CONFIG_EXYNOS_DEV_DMA=y
 CONFIG_EXYNOS_DEV_DRM=y
 CONFIG_EXYNOS4_SETUP_FIMD0=y
 CONFIG_EXYNOS_DEV_SYSMMU=y
+CONFIG_EXYNOS4_DEV_DWMCI=y
 CONFIG_EXYNOS4_DEV_USB_OHCI=y
 CONFIG_EXYNOS4_SETUP_I2C1=y
 CONFIG_EXYNOS4_SETUP_I2C3=y
@@ -384,6 +385,8 @@ CONFIG_EXYNOS4_SETUP_I2C7=y
 CONFIG_EXYNOS4_SETUP_KEYPAD=y
 CONFIG_EXYNOS4_SETUP_SDHCI=y
 CONFIG_EXYNOS4_SETUP_SDHCI_GPIO=y
+CONFIG_EXYNOS4_SETUP_DWMCI=y
+CONFIG_EXYNOS4_SETUP_DWMCI_GPIO=y
 CONFIG_EXYNOS4_SETUP_USB_PHY=y
 
 #
@@ -606,6 +609,8 @@ CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 # CONFIG_APM_EMULATION is not set
 CONFIG_PM_CLK=y
+CONFIG_PM_GENERIC_DOMAINS=y
+CONFIG_PM_GENERIC_DOMAINS_RUNTIME=y
 CONFIG_CPU_PM=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
@@ -2369,7 +2374,9 @@ CONFIG_MMC_SDHCI_S3C=y
 # CONFIG_MMC_SDHCI_PXAV3 is not set
 # CONFIG_MMC_SDHCI_PXAV2 is not set
 # CONFIG_MMC_SDHCI_S3C_DMA is not set
-# CONFIG_MMC_DW is not set
+CONFIG_MMC_DW=y
+# CONFIG_MMC_DW_IDMAC is not set
+CONFIG_MMC_DW_PLTFM=y
 # CONFIG_MMC_VUB300 is not set
 # CONFIG_MMC_USHC is not set
 # CONFIG_MEMSTICK is not set
