--- a/arch/arm/configs/odroidx_defconfig
+++ b/arch/arm/configs/odroidx_defconfig
@@ -2033,11 +2033,15 @@ CONFIG_SND_USB=y
 CONFIG_SND_SOC=y
 # CONFIG_SND_DESIGNWARE_I2S is not set
 CONFIG_SND_SOC_SAMSUNG=y
+CONFIG_SND_SAMSUNG_I2S=y
 # CONFIG_SND_SOC_SAMSUNG_SMDK_WM8994 is not set
 # CONFIG_SND_SOC_SAMSUNG_SMDK_SPDIF is not set
 # CONFIG_SND_SOC_SMDK_WM8994_PCM is not set
+CONFIG_SND_SOC_HKDK_MAX98090=y
+CONFIG_MAX98090_HEADSET=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
+CONFIG_SND_SOC_MAX98090=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
