--- a/sabayon/config/server-3.5-amd64.config
+++ b/sabayon/config/server-3.5-amd64.config
@@ -5913,7 +5913,7 @@ CONFIG_UFS_FS=y
 # CONFIG_UFS_DEBUG is not set
 CONFIG_EXOFS_FS=m
 # CONFIG_EXOFS_DEBUG is not set
-CONFIG_AUFS_FS=m
+CONFIG_AUFS_FS=y
 CONFIG_AUFS_BRANCH_MAX_127=y
 # CONFIG_AUFS_BRANCH_MAX_511 is not set
 # CONFIG_AUFS_BRANCH_MAX_1023 is not set
