--- a/sabayon/config/server-3.5-amd64.config
+++ b/sabayon/config/server-3.5-amd64.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86_64 3.5.0 Kernel Configuration
+# Linux/x86_64 3.5.1 Kernel Configuration
 #
 CONFIG_64BIT=y
 # CONFIG_X86_32 is not set
@@ -509,7 +509,7 @@ CONFIG_ACPI_PROC_EVENT=y
 CONFIG_ACPI_AC=y
 CONFIG_ACPI_BATTERY=y
 CONFIG_ACPI_BUTTON=y
-CONFIG_ACPI_VIDEO=m
+CONFIG_ACPI_VIDEO=y
 CONFIG_ACPI_FAN=y
 CONFIG_ACPI_DOCK=y
 CONFIG_ACPI_PROCESSOR=y
@@ -3045,7 +3045,7 @@ CONFIG_TCG_ATMEL=m
 CONFIG_TCG_INFINEON=m
 CONFIG_TELCLOCK=m
 CONFIG_DEVPORT=y
-CONFIG_I2C=m
+CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_COMPAT=y
 CONFIG_I2C_CHARDEV=m
@@ -3059,7 +3059,7 @@ CONFIG_I2C_MUX_PCA9541=m
 CONFIG_I2C_MUX_PCA954x=m
 CONFIG_I2C_HELPER_AUTO=y
 CONFIG_I2C_SMBUS=m
-CONFIG_I2C_ALGOBIT=m
+CONFIG_I2C_ALGOBIT=y
 CONFIG_I2C_ALGOPCA=m
 
 #
@@ -3199,6 +3199,7 @@ CONFIG_GPIO_MAX7300=m
 CONFIG_GPIO_MAX732X=m
 CONFIG_GPIO_PCA953X=m
 CONFIG_GPIO_PCF857X=m
+# CONFIG_GPIO_SX150X is not set
 CONFIG_GPIO_STMPE=y
 CONFIG_GPIO_TPS65912=m
 CONFIG_GPIO_ADP5588=m
@@ -3503,27 +3504,48 @@ CONFIG_BCMA_HOST_PCI=y
 # Multifunction device drivers
 #
 CONFIG_MFD_CORE=y
+# CONFIG_MFD_88PM860X is not set
 CONFIG_MFD_SM501=m
 # CONFIG_MFD_SM501_GPIO is not set
 CONFIG_HTC_PASIC3=m
+# CONFIG_HTC_I2CPLD is not set
 CONFIG_UCB1400_CORE=m
 CONFIG_MFD_LM3533=m
 CONFIG_TPS6105X=m
 CONFIG_TPS65010=m
 CONFIG_TPS6507X=m
 CONFIG_MFD_TPS65217=m
+# CONFIG_MFD_TPS6586X is not set
+# CONFIG_MFD_TPS65910 is not set
 CONFIG_MFD_TPS65912=y
+# CONFIG_MFD_TPS65912_I2C is not set
 CONFIG_MFD_TPS65912_SPI=y
+# CONFIG_TWL4030_CORE is not set
+# CONFIG_TWL6040_CORE is not set
 CONFIG_MFD_STMPE=y
 
 #
 # STMPE Interface Drivers
 #
+CONFIG_STMPE_I2C=y
 CONFIG_STMPE_SPI=y
+# CONFIG_MFD_TC3589X is not set
 # CONFIG_MFD_TMIO is not set
+# CONFIG_PMIC_DA903X is not set
 CONFIG_PMIC_DA9052=y
 CONFIG_MFD_DA9052_SPI=y
+# CONFIG_MFD_DA9052_I2C is not set
+# CONFIG_PMIC_ADP5520 is not set
+# CONFIG_MFD_MAX77693 is not set
+# CONFIG_MFD_MAX8925 is not set
+# CONFIG_MFD_MAX8997 is not set
+# CONFIG_MFD_MAX8998 is not set
+# CONFIG_MFD_S5M_CORE is not set
+# CONFIG_MFD_WM8400 is not set
+# CONFIG_MFD_WM831X_I2C is not set
 # CONFIG_MFD_WM831X_SPI is not set
+# CONFIG_MFD_WM8350_I2C is not set
+# CONFIG_MFD_WM8994 is not set
 CONFIG_MFD_PCF50633=m
 CONFIG_PCF50633_ADC=m
 CONFIG_PCF50633_GPIO=m
@@ -3532,6 +3554,7 @@ CONFIG_MFD_MC13XXX=m
 CONFIG_MFD_MC13XXX_SPI=m
 CONFIG_MFD_MC13XXX_I2C=m
 CONFIG_ABX500_CORE=y
+# CONFIG_AB3100_CORE is not set
 CONFIG_EZX_PCAP=y
 CONFIG_MFD_CS5535=m
 CONFIG_MFD_TIMBERDALE=m
@@ -3541,6 +3564,10 @@ CONFIG_MFD_RDC321X=m
 CONFIG_MFD_JANZ_CMODIO=m
 CONFIG_MFD_VX855=m
 CONFIG_MFD_WL1273_CORE=m
+# CONFIG_MFD_TPS65090 is not set
+# CONFIG_MFD_AAT2870_CORE is not set
+# CONFIG_MFD_RC5T583 is not set
+# CONFIG_MFD_PALMAS is not set
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_DEBUG is not set
 # CONFIG_REGULATOR_DUMMY is not set
@@ -4149,19 +4176,19 @@ CONFIG_DVB_AF9033=m
 #
 CONFIG_AGP=y
 CONFIG_AGP_AMD64=y
-CONFIG_AGP_INTEL=m
+CONFIG_AGP_INTEL=y
 CONFIG_AGP_SIS=m
 CONFIG_AGP_VIA=m
 CONFIG_VGA_ARB=y
 CONFIG_VGA_ARB_MAX_GPUS=16
 CONFIG_VGA_SWITCHEROO=y
-CONFIG_DRM=m
-CONFIG_DRM_USB=m
-CONFIG_DRM_KMS_HELPER=m
+CONFIG_DRM=y
+CONFIG_DRM_USB=y
+CONFIG_DRM_KMS_HELPER=y
 # CONFIG_DRM_LOAD_EDID_FIRMWARE is not set
-CONFIG_DRM_TTM=m
-CONFIG_DRM_TDFX=m
-CONFIG_DRM_R128=m
+CONFIG_DRM_TTM=y
+CONFIG_DRM_TDFX=y
+CONFIG_DRM_R128=y
 CONFIG_DRM_RADEON=m
 # CONFIG_DRM_RADEON_KMS is not set
 CONFIG_DRM_NOUVEAU=m
@@ -4173,24 +4200,24 @@ CONFIG_DRM_NOUVEAU_DEBUG=y
 #
 CONFIG_DRM_I2C_CH7006=m
 CONFIG_DRM_I2C_SIL164=m
-CONFIG_DRM_I810=m
-CONFIG_DRM_I915=m
+CONFIG_DRM_I810=y
+CONFIG_DRM_I915=y
 CONFIG_DRM_I915_KMS=y
-CONFIG_DRM_MGA=m
-CONFIG_DRM_SIS=m
-CONFIG_DRM_VIA=m
-CONFIG_DRM_SAVAGE=m
-CONFIG_DRM_VMWGFX=m
-CONFIG_DRM_GMA500=m
+CONFIG_DRM_MGA=y
+CONFIG_DRM_SIS=y
+CONFIG_DRM_VIA=y
+CONFIG_DRM_SAVAGE=y
+CONFIG_DRM_VMWGFX=y
+CONFIG_DRM_GMA500=y
 CONFIG_DRM_GMA600=y
 CONFIG_DRM_GMA3600=y
-CONFIG_DRM_UDL=m
+CONFIG_DRM_UDL=y
 CONFIG_DRM_AST=m
 CONFIG_DRM_MGAG200=m
-CONFIG_DRM_CIRRUS_QEMU=m
+CONFIG_DRM_CIRRUS_QEMU=y
 CONFIG_STUB_POULSBO=m
 CONFIG_VGASTATE=m
-CONFIG_VIDEO_OUTPUT_CONTROL=m
+CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
 CONFIG_FIRMWARE_EDID=y
 CONFIG_FB_DDC=m
