sabayon: add aufs

--- a/sabayon/config/sabayon-3.10-amd64.config
+++ b/sabayon/config/sabayon-3.10-amd64.config
@@ -3109,6 +3109,7 @@ CONFIG_SERIAL_8250_DW=m
 #
 CONFIG_SERIAL_MAX3100=m
 CONFIG_SERIAL_MAX310X=y
+# CONFIG_SERIAL_MRST_MAX3110 is not set
 CONFIG_SERIAL_MFD_HSU=m
 CONFIG_SERIAL_UARTLITE=m
 CONFIG_SERIAL_CORE=y
@@ -3273,7 +3274,10 @@ CONFIG_SPI_SC18IS602=m
 CONFIG_SPI_TOPCLIFF_PCH=m
 CONFIG_SPI_XCOMM=m
 CONFIG_SPI_XILINX=m
-# CONFIG_SPI_DESIGNWARE is not set
+CONFIG_SPI_DESIGNWARE=m
+CONFIG_SPI_DW_PCI=m
+# CONFIG_SPI_DW_MID_DMA is not set
+CONFIG_SPI_DW_MMIO=m
 
 #
 # SPI Protocol Masters
@@ -6397,6 +6401,25 @@ CONFIG_F2FS_FS=m
 CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_AUFS_FS=y
+CONFIG_AUFS_BRANCH_MAX_127=y
+# CONFIG_AUFS_BRANCH_MAX_511 is not set
+# CONFIG_AUFS_BRANCH_MAX_1023 is not set
+# CONFIG_AUFS_BRANCH_MAX_32767 is not set
+CONFIG_AUFS_SBILIST=y
+CONFIG_AUFS_HNOTIFY=y
+CONFIG_AUFS_HFSNOTIFY=y
+# CONFIG_AUFS_EXPORT is not set
+# CONFIG_AUFS_RDU is not set
+CONFIG_AUFS_PROC_MAP=y
+CONFIG_AUFS_SP_IATTR=y
+CONFIG_AUFS_SHWH=y
+# CONFIG_AUFS_BR_RAMFS is not set
+CONFIG_AUFS_BR_FUSE=y
+CONFIG_AUFS_POLL=y
+CONFIG_AUFS_BR_HFSPLUS=y
+CONFIG_AUFS_BDEV_LOOP=y
+# CONFIG_AUFS_DEBUG is not set
 CONFIG_EFIVAR_FS=m
 CONFIG_ORE=m
 CONFIG_NETWORK_FILESYSTEMS=y
