sabayon: move CONFIG_DRM and CONFIG_AGP* to M from y.

--- a/sabayon/config/sabayon-3.10-x86.config
+++ b/sabayon/config/sabayon-3.10-x86.config
@@ -3313,7 +3313,7 @@ CONFIG_I2C_MUX_PCA9541=m
 CONFIG_I2C_MUX_PCA954x=m
 CONFIG_I2C_HELPER_AUTO=y
 CONFIG_I2C_SMBUS=m
-CONFIG_I2C_ALGOBIT=y
+CONFIG_I2C_ALGOBIT=m
 CONFIG_I2C_ALGOPCA=m
 
 #
@@ -4596,12 +4596,12 @@ CONFIG_DVB_AF9033=m
 #
 # Graphics support
 #
-CONFIG_AGP=y
+CONFIG_AGP=m
 CONFIG_AGP_ALI=m
 CONFIG_AGP_ATI=m
 CONFIG_AGP_AMD=m
-CONFIG_AGP_AMD64=y
-CONFIG_AGP_INTEL=y
+CONFIG_AGP_AMD64=m
+CONFIG_AGP_INTEL=m
 CONFIG_AGP_NVIDIA=m
 CONFIG_AGP_SIS=m
 CONFIG_AGP_SWORKS=m
@@ -4610,11 +4610,11 @@ CONFIG_AGP_EFFICEON=m
 CONFIG_VGA_ARB=y
 CONFIG_VGA_ARB_MAX_GPUS=16
 CONFIG_VGA_SWITCHEROO=y
-CONFIG_DRM=y
-CONFIG_DRM_USB=y
-CONFIG_DRM_KMS_HELPER=y
+CONFIG_DRM=m
+CONFIG_DRM_USB=m
+CONFIG_DRM_KMS_HELPER=m
 # CONFIG_DRM_LOAD_EDID_FIRMWARE is not set
-CONFIG_DRM_TTM=y
+CONFIG_DRM_TTM=m
 
 #
 # I2C encoder or helper chips
@@ -4622,8 +4622,8 @@ CONFIG_DRM_TTM=y
 CONFIG_DRM_I2C_CH7006=m
 CONFIG_DRM_I2C_SIL164=m
 CONFIG_DRM_I2C_NXP_TDA998X=m
-CONFIG_DRM_TDFX=y
-CONFIG_DRM_R128=y
+CONFIG_DRM_TDFX=m
+CONFIG_DRM_R128=m
 CONFIG_DRM_RADEON=m
 # CONFIG_DRM_RADEON_UMS is not set
 CONFIG_DRM_NOUVEAU=m
@@ -4631,22 +4631,22 @@ CONFIG_NOUVEAU_DEBUG=5
 CONFIG_NOUVEAU_DEBUG_DEFAULT=3
 CONFIG_DRM_NOUVEAU_BACKLIGHT=y
 CONFIG_DRM_I810=m
-CONFIG_DRM_I915=y
+CONFIG_DRM_I915=m
 CONFIG_DRM_I915_KMS=y
-CONFIG_DRM_MGA=y
-CONFIG_DRM_SIS=y
-CONFIG_DRM_VIA=y
-CONFIG_DRM_SAVAGE=y
-CONFIG_DRM_VMWGFX=y
+CONFIG_DRM_MGA=m
+CONFIG_DRM_SIS=m
+CONFIG_DRM_VIA=m
+CONFIG_DRM_SAVAGE=m
+CONFIG_DRM_VMWGFX=m
 CONFIG_DRM_VMWGFX_FBCON=y
-CONFIG_DRM_GMA500=y
+CONFIG_DRM_GMA500=m
 CONFIG_DRM_GMA600=y
 CONFIG_DRM_GMA3600=y
 CONFIG_DRM_MEDFIELD=y
-CONFIG_DRM_UDL=y
+CONFIG_DRM_UDL=m
 CONFIG_DRM_AST=m
 CONFIG_DRM_MGAG200=m
-CONFIG_DRM_CIRRUS_QEMU=y
+CONFIG_DRM_CIRRUS_QEMU=m
 CONFIG_DRM_QXL=m
 CONFIG_VGASTATE=m
 CONFIG_VIDEO_OUTPUT_CONTROL=y
@@ -4659,9 +4659,9 @@ CONFIG_FB_CFB_FILLRECT=y
 CONFIG_FB_CFB_COPYAREA=y
 CONFIG_FB_CFB_IMAGEBLIT=y
 # CONFIG_FB_CFB_REV_PIXELS_IN_BYTE is not set
-CONFIG_FB_SYS_FILLRECT=y
-CONFIG_FB_SYS_COPYAREA=y
-CONFIG_FB_SYS_IMAGEBLIT=y
+CONFIG_FB_SYS_FILLRECT=m
+CONFIG_FB_SYS_COPYAREA=m
+CONFIG_FB_SYS_IMAGEBLIT=m
 # CONFIG_FB_FOREIGN_ENDIAN is not set
 CONFIG_FB_SYS_FOPS=m
 CONFIG_FB_DEFERRED_IO=y
