sabayon: update kernels

--- a/sabayon/config/sabayon-3.9-armv7.config
+++ b/sabayon/config/sabayon-3.9-armv7.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.9.7 Kernel Configuration
+# Linux/arm 3.9.9 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -527,6 +527,7 @@ CONFIG_ARM_ERRATA_326103=y
 CONFIG_ARM_ERRATA_411920=y
 CONFIG_ARM_ERRATA_430973=y
 CONFIG_PL310_ERRATA_588369=y
+CONFIG_ARM_ERRATA_643719=y
 CONFIG_ARM_ERRATA_720789=y
 CONFIG_PL310_ERRATA_727915=y
 CONFIG_ARM_ERRATA_754322=y
