sabayon: update kernel configs

--- a/sabayon/config/sabayon-3.4-beagle+panda.config
+++ b/sabayon/config/sabayon-3.4-beagle+panda.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.2 Kernel Configuration
+# Linux/arm 3.4.52 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -438,6 +438,7 @@ CONFIG_PL310_ERRATA_727915=y
 # CONFIG_ARM_ERRATA_754327 is not set
 # CONFIG_ARM_ERRATA_764369 is not set
 # CONFIG_PL310_ERRATA_769419 is not set
+CONFIG_ARM_ERRATA_775420=y
 CONFIG_ARM_GIC=y
 
 #
@@ -2005,7 +2006,6 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_STORAGE_KARMA is not set
 # CONFIG_USB_STORAGE_CYPRESS_ATACB is not set
 # CONFIG_USB_STORAGE_ENE_UB6250 is not set
-# CONFIG_USB_UAS is not set
 CONFIG_USB_LIBUSUAL=y
 
 #
